added next season

--- a/upcoming_shows/index.html
+++ b/upcoming_shows/index.html
@@ -47,6 +47,7 @@
 
   <meta itemprop="name" content="Upcoming Shows">
   <meta itemprop="description" content="Check out Troupe 513&#39;s upcoming productions!">
+  <meta itemprop="wordCount" content="5">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Upcoming Shows">
   <meta name="twitter:description" content="Check out Troupe 513&#39;s upcoming productions!">
@@ -146,7 +147,15 @@
         </h1>
       </header>
       <div class="nested-copy-line-height lh-copy f4 nested-links mid-gray helvetica">
-        
+        <p><figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
+      <h4>Looking forward to next year!</h4>
+    </figcaption>
+</figure>
+
+<figure><img src="/images/mainstage_season.jpg">
+</figure>
+</p>
+
       </div>
     </article>
   </div>
