--- a/booster_board/index.html
+++ b/booster_board/index.html
@@ -47,7 +47,7 @@
 
   <meta itemprop="name" content="Booster Board">
   <meta itemprop="description" content="Meet our amazing boosters!">
-  <meta itemprop="wordCount" content="171">
+  <meta itemprop="wordCount" content="242">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Booster Board">
   <meta name="twitter:description" content="Meet our amazing boosters!">
@@ -98,6 +98,12 @@
           <li class="list f5 f4-ns fw4 dib pr3">
             <a class="hover-white no-underline white helvetica" href="/booster_board/" title="Booster Board page">
               Booster Board
+            </a>
+          </li>
+          
+          <li class="list f5 f4-ns fw4 dib pr3">
+            <a class="hover-white no-underline white helvetica" href="/faq/" title="FAQ page">
+              FAQ
             </a>
           </li>
           
@@ -166,11 +172,15 @@
     </figcaption>
 </figure>
 
-<figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
+<p><figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
       <h4>Amanda Gibson - Assistant Treasurer</h4>
     </figcaption>
 </figure>
 
+<figure><img src="/images/amanda_gibson.jpg">
+</figure>
+</p>
+<p>Amanda is the assistant treasurer soon to be treasurer for the 25-26 school year. Amanda has a daughter and son. Her daughter is in college studying ceramics and her son is  a sophomore at Westerville South and involved with theater. She works for a small home builder when not at work, or busy with the kids she enjoys traveling with her family and spending time at the family cottage in Canada.</p>
 <p><figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
       <h4>Colleen Light - Secretary</h4>
     </figcaption>
