--- a/faq/index.html
+++ b/faq/index.html
@@ -47,7 +47,7 @@
 
   <meta itemprop="name" content="FAQ">
   <meta itemprop="description" content="Frequently asked questions">
-  <meta itemprop="wordCount" content="5785">
+  <meta itemprop="wordCount" content="5930">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="FAQ">
   <meta name="twitter:description" content="Frequently asked questions">
@@ -153,7 +153,30 @@
         </h1>
       </header>
       <div class="nested-copy-line-height lh-copy f4 nested-links mid-gray helvetica">
-        <figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
+        <p><a href="http://localhost:1313/faq/?scroll=1880">What is the CAPA Marquee Program?</a></p>
+<p><a href="http://localhost:1313/faq/?scroll=3056">What are troupe dues and why should my child join?</a></p>
+<p><a href="http://localhost:1313/faq/?scroll=3860">What is Booster membership and why should I join?</a></p>
+<p><a href="http://localhost:1313/faq/?scroll=4712">What is the One Stop Shop?</a></p>
+<p><a href="http://localhost:1313/faq/?scroll=5836">What is Fall Conference?</a></p>
+<p><a href="http://localhost:1313/faq/?scroll=6538">What is a student-directed one-act?</a></p>
+<p><a href="http://localhost:1313/faq/?scroll=7223">What happens when my kid gets cast in a main stage show?</a></p>
+<p><a href="http://localhost:1313/faq/?scroll=8376">What is tech week or a tech practice?</a></p>
+<p><a href="http://localhost:1313/faq/?scroll=8962">What is Scho Show?</a></p>
+<p><a href="http://localhost:1313/faq/?scroll=9796">How can adults get involved?</a></p>
+<p><a href="http://localhost:1313/faq/?scroll=10576">What are the volunteer jobs over show weekend?</a></p>
+<p><a href="http://localhost:1313/faq/?scroll=11916">Who can I contact?</a></p>
+<p><a href="http://localhost:1313/faq/?scroll=12916">What is the company party?</a></p>
+<p><a href="http://localhost:1313/faq/?scroll=14269">What is a dance rehersal like?</a></p>
+<p><a href="http://localhost:1313/faq/?scroll=15368">What is show week like?</a></p>
+<p><a href="http://localhost:1313/faq/?scroll=16602">What is black box theatre?</a></p>
+<p><a href="http://localhost:1313/faq/?scroll=17208">What is Winter Cabaret?</a></p>
+<p><a href="http://localhost:1313/faq/?scroll=17516">What are the CAPA Marquee Master Classes?</a></p>
+<p><a href="http://localhost:1313/faq/?scroll=17835">What is Giving Tuesday?</a></p>
+<p><a href="http://localhost:1313/faq/?scroll=18655">What is the Black History Month (BHM) show?</a></p>
+<p><a href="http://localhost:1313/faq/?scroll=18935">Who are the other adults that work with the troupe (besides Wolfe)?</a></p>
+<p><a href="http://localhost:1313/faq/?scroll=19695">What is Theatremas?</a></p>
+<p><a href="http://localhost:1313/faq/?scroll=20214">What is state thespian conference?</a></p>
+<figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
       <h4>What is the CAPA Marquee Program?</h4>
     </figcaption>
 </figure>
@@ -202,11 +225,11 @@
 <p>Financial Assistance Donations. If you would like to make a donation in any amount to cover the cost for students who need financial assistance, please indicate the amount on the form.</p>
 <p>Program Ads and Shout Outs. For each mainstage production, we produce a lovely program. Ads help us pay the costs of the program, raise a little money, and celebrate your thespian! An ad can be a variety of sizes (see information in the form) and include a picture or several. A shout out is a one-line ad of 10 words maximum.</p>
 <figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
-      <h4>What is Fall conference?</h4>
+      <h4>What is Fall Conference?</h4>
     </figcaption>
 </figure>
 
-<p>Ohio Fall conference is a one-day event that rolls five fantastic events into one. It includes the Ohio Unified Auditions and interviews, the All-Ohio Show auditions and interviews, the Thespy Competition, the Technical Theatre &amp; Design Symposium, and the Theatre College &amp; University Fair.</p>
+<p>Ohio Fall Conference is a one-day event that rolls five fantastic events into one. It includes the Ohio Unified Auditions and interviews, the All-Ohio Show auditions and interviews, the Thespy Competition, the Technical Theatre &amp; Design Symposium, and the Theatre College &amp; University Fair.</p>
 <p>All-Ohio Auditions &amp; Interviews</p>
 <p>The annual All-Ohio production is one of Ohio Thespians&rsquo; most exciting opportunities. The All-Ohio production serves to bring together the best high school theatre artists throughout the state for a production experience they likely would not have in their school communities, working with a production team of professional theatre artists.</p>
 <p>Thespys:</p>
@@ -436,13 +459,19 @@ As we get closer to Giving Tuesday, please keep an eye on out for further instru
 <p>Now you are probably asking what is an STO? An STO is a State Thespian Officer. Our very own Ny&rsquo;Asia (‘25) was an STO. STOs represent different areas of Ohio and they do things to help out with the conference. I&rsquo;m not clear on all their tasks, but as mentioned above, they sell ducks to raise money and they also help emcee parts of the conference.</p>
 <p>Let&rsquo;s talk about food. The conference supplies lunch and dinner on Saturday, and the boosters usually coordinate pizza Friday evening and/or Saturday evening.</p>
 <p>The conference will be full of workshops and performances, bookended by an opening ceremony and a closing ceremony. Download the app once it is available and you can see all of the workshops and performances that will be available. If you click on any of the choices there will be a description of the workshop or performance.  In addition to the workshops and performances, there will be an area with vendors and college reps. This is a good place to talk to different colleges if your thespian is interested in going into theatre (both performance and the tech side). You do not need to sign up for the workshops - you just show up at the time it says on the app. There are a couple of workshops that are invite only, but those are indicated on the app.</p>
-<p>All Ohio show: At the fall conference there are auditions and interviews for the All Ohio show.  Kids from all over Ohio participate in putting together this show, which is a play in odd years and a musical in even years. They basically work on the All Ohio show on 3 day weekends. The kids from out of town, stay with host families. There is usually a public viewing of the show the Thursday before the conference starts. The All Ohio show will be shown twice during the conference.</p>
+<p>All Ohio show: At the Fall Conference there are auditions and interviews for the All Ohio show.  Kids from all over Ohio participate in putting together this show, which is a play in odd years and a musical in even years. They basically work on the All Ohio show on 3 day weekends. The kids from out of town, stay with host families. There is usually a public viewing of the show the Thursday before the conference starts. The All Ohio show will be shown twice during the conference.</p>
 <p>Wolfe, Seth, Katie, and at least 4 parent chaperones will be there the whole weekend and are available if the kids have any questions or needs etc.</p>
 <p>This is a long weekend, I encourage everyone to be well fed, well hydrated, and ready to have fun and learn some things. You can send your kid with money for concessions, ducks, silent auction, and vendors. But money is not necessary - some kids don’t spend any money.</p>
 
       </div>
     </article>
   </div>
+  <script>
+    const scroll = new URLSearchParams(window.location.search).get('scroll');
+    if (scroll != null) {
+      window.scrollTo(0, scroll);
+    }
+  </script>
 
 
     </main>
