--- a/faq/index.html
+++ b/faq/index.html
@@ -47,7 +47,7 @@
 
   <meta itemprop="name" content="FAQ">
   <meta itemprop="description" content="Frequently asked questions">
-  <meta itemprop="wordCount" content="5785">
+  <meta itemprop="wordCount" content="5930">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="FAQ">
   <meta name="twitter:description" content="Frequently asked questions">
@@ -153,7 +153,30 @@
         </h1>
       </header>
       <div class="nested-copy-line-height lh-copy f4 nested-links mid-gray helvetica">
-        <figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
+        <p><a href="https://wshstheatre.org/faq/?scroll=0.08530615736383745">What is the CAPA Marquee Program?</a></p>
+<p><a href="https://wshstheatre.org/faq/?scroll=0.13884086980256574">What are troupe dues and why should my child join?</a></p>
+<p><a href="https://wshstheatre.org/faq/?scroll=0.17552542545463334">What is Booster membership and why should I join?</a></p>
+<p><a href="https://wshstheatre.org/faq/?scroll=0.21432081681887452">What is the One Stop Shop?</a></p>
+<p><a href="https://wshstheatre.org/faq/?scroll=0.26552633084739785">What is Fall Conference?</a></p>
+<p><a href="https://wshstheatre.org/faq/?scroll=0.29704303965318213">What is a student-directed one-act?</a></p>
+<p><a href="https://wshstheatre.org/faq/?scroll=0.3283413746545469">What happens when my kid gets cast in a main stage show?</a></p>
+<p><a href="https://wshstheatre.org/faq/?scroll=0.3811482299438177">What is tech week or a tech practice?</a></p>
+<p><a href="https://wshstheatre.org/faq/?scroll=0.40778819033754893">What is Scho Show?</a></p>
+<p><a href="https://wshstheatre.org/faq/?scroll=0.4457101086968884">How can adults get involved?</a></p>
+<p><a href="https://wshstheatre.org/faq/?scroll=0.4815576202972887">What are the volunteer jobs over show weekend?</a></p>
+<p><a href="https://wshstheatre.org/faq/?scroll=0.5422254660773588">Who can I contact?</a></p>
+<p><a href="https://wshstheatre.org/faq/?scroll=0.5878628146039941">What is the company party?</a></p>
+<p><a href="https://wshstheatre.org/faq/?scroll=0.6489309346141161">What is a dance rehersal like?</a></p>
+<p><a href="https://wshstheatre.org/faq/?scroll=0.6989718772035074">What is show week like?</a></p>
+<p><a href="https://wshstheatre.org/faq/?scroll=0.7550905463845419">What is black box theatre?</a></p>
+<p><a href="https://wshstheatre.org/faq/?scroll=0.7826767710513147">What is Winter Cabaret?</a></p>
+<p><a href="https://wshstheatre.org/faq/?scroll=0.7973796742789555">What are the CAPA Marquee Master Classes?</a></p>
+<p><a href="https://wshstheatre.org/faq/?scroll=0.8113183691486217">What is Giving Tuesday?</a></p>
+<p><a href="https://wshstheatre.org/faq/?scroll=0.8480029470134656">What is the Black History Month (BHM) show?</a></p>
+<p><a href="https://wshstheatre.org/faq/?scroll=0.861104575618688">Who are the other adults that work with the troupe (besides Wolfe)?</a></p>
+<p><a href="https://wshstheatre.org/faq/?scroll=0.8957146578734874">What is Theatremas?</a></p>
+<p><a href="https://wshstheatre.org/faq/?scroll=0.9200254753889546">What is state thespian conference?</a></p>
+<figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
       <h4>What is the CAPA Marquee Program?</h4>
     </figcaption>
 </figure>
@@ -444,9 +467,10 @@ As we get closer to Giving Tuesday, please keep an eye on out for further instru
     </article>
   </div>
   <script>
+    console.log(window.scrollY / document.documentElement.scrollHeight);
     const scroll = new URLSearchParams(window.location.search).get('scroll');
     if (scroll != null) {
-      window.scrollTo(0, scroll);
+      window.scrollTo(0, document.documentElement.scrollHeight * scroll);
     }
   </script>
 
