--- a/upcoming_shows/index.html
+++ b/upcoming_shows/index.html
@@ -166,9 +166,10 @@
     </article>
   </div>
   <script>
+    console.log(window.scrollY / document.documentElement.scrollHeight);
     const scroll = new URLSearchParams(window.location.search).get('scroll');
     if (scroll != null) {
-      window.scrollTo(0, scroll);
+      window.scrollTo(0, document.documentElement.scrollHeight * scroll);
     }
   </script>
 
