rereadded a fixed faq table of contents

--- a/upcoming_shows/index.html
+++ b/upcoming_shows/index.html
@@ -166,10 +166,10 @@
     </article>
   </div>
   <script>
-    console.log(window.scrollY / document.documentElement.scrollHeight);
-    const scroll = new URLSearchParams(window.location.search).get('scroll');
-    if (scroll != null) {
-      window.scrollTo(0, document.documentElement.scrollHeight * scroll);
+    const collection = document.getElementsByClassName("nested-copy-line-height");
+    const q = new URLSearchParams(window.location.search).get('q');
+    if (q != null) {
+      window.scrollTo(0, collection[q].getBoundingClientRect().top);
     }
   </script>
 
