--- a/faq/index.html
+++ b/faq/index.html
@@ -47,7 +47,7 @@
 
   <meta itemprop="name" content="FAQ">
   <meta itemprop="description" content="Frequently asked questions">
-  <meta itemprop="wordCount" content="5785">
+  <meta itemprop="wordCount" content="5930">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="FAQ">
   <meta name="twitter:description" content="Frequently asked questions">
@@ -153,7 +153,30 @@
         </h1>
       </header>
       <div class="nested-copy-line-height lh-copy f4 nested-links mid-gray helvetica">
-        <figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
+        <p><a href="https://wshstheatre.org/faq/?q=1">What is the CAPA Marquee Program?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=2">What are troupe dues and why should my child join?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=3">What is Booster membership and why should I join?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=4">What is the One Stop Shop?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=5">What is Fall Conference?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=6">What is a student-directed one-act?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=7">What happens when my kid gets cast in a main stage show?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=8">What is tech week or a tech practice?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=9">What is Scho Show?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=10">How can adults get involved?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=11">What are the volunteer jobs over show weekend?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=12">Who can I contact?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=13">What is the company party?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=14">What is a dance rehersal like?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=15">What is show week like?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=16">What is black box theatre?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=17">What is Winter Cabaret?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=18">What are the CAPA Marquee Master Classes?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=19">What is Giving Tuesday?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=20">What is the Black History Month (BHM) show?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=21">Who are the other adults that work with the troupe (besides Wolfe)?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=22">What is Theatremas?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=23">What is state thespian conference?</a></p>
+<figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
       <h4>What is the CAPA Marquee Program?</h4>
     </figcaption>
 </figure>
@@ -444,10 +467,10 @@ As we get closer to Giving Tuesday, please keep an eye on out for further instru
     </article>
   </div>
   <script>
-    console.log(window.scrollY / document.documentElement.scrollHeight);
-    const scroll = new URLSearchParams(window.location.search).get('scroll');
-    if (scroll != null) {
-      window.scrollTo(0, document.documentElement.scrollHeight * scroll);
+    const collection = document.getElementsByClassName("nested-copy-line-height");
+    const q = new URLSearchParams(window.location.search).get('q');
+    if (q != null) {
+      window.scrollTo(0, collection[q].getBoundingClientRect().top);
     }
   </script>
 
