added 'back to top' buttons to faq

--- a/past_shows/index.html
+++ b/past_shows/index.html
@@ -265,7 +265,11 @@
     const collection = document.getElementsByClassName("nested-copy-line-height");
     const q = new URLSearchParams(window.location.search).get('q');
     if (q != null) {
-      window.scrollTo(0, collection[q].getBoundingClientRect().top);
+      if (q == 0) {
+        window.scrollTo(0, 0);
+      } else {
+        window.scrollTo(0, collection[q].getBoundingClientRect().top);
+      }
     }
   </script>
 
