--- a/past_shows/index.html
+++ b/past_shows/index.html
@@ -47,7 +47,7 @@
 
   <meta itemprop="name" content="Past Shows">
   <meta itemprop="description" content="Check out Troupe 513&#39;s past productions!">
-  <meta itemprop="wordCount" content="251">
+  <meta itemprop="wordCount" content="266">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Past Shows">
   <meta name="twitter:description" content="Check out Troupe 513&#39;s past productions!">
@@ -174,6 +174,11 @@
 <li><a href="https://drive.google.com/file/d/1eDnziSLlf2DMb5OpuW0BvosVsw85e6Og/view?usp=sharing" target="_blank">Playbill</a></li>
 </ul>
 <p>Where the Truth Lies - Student Directed Full Length</p>
+<p>Almost Main - Extra Director Project</p>
+<p>Charlie and the Chocolate Factory - Spring Musical</p>
+<ul>
+<li><a href="https://drive.google.com/file/d/1-iHx04yEOtZ6Z4v2PFj9WsTERPQKADQ8/view?usp=sharing" target="_blank">Playbill</a></li>
+</ul>
 <figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
       <h4>2023-2024</h4>
     </figcaption>
