updated image sizes and faq

--- a/booster_board/index.html
+++ b/booster_board/index.html
@@ -16,7 +16,7 @@
     
 
     
-<link rel="stylesheet" href="/ananke/css/main.min.03379cc185ef6b7f38817990b2975e62a33d24a5763081ae661810c68171f10a.css" >
+<link rel="stylesheet" href="/ananke/css/main.min.959199c6d5df7a6f64c697d5f7fe51fd909a8eb93dace05ee0c243404f865326.css" >
 
 
 
@@ -47,7 +47,7 @@
 
   <meta itemprop="name" content="Booster Board">
   <meta itemprop="description" content="Meet our amazing boosters!">
-  <meta itemprop="wordCount" content="242">
+  <meta itemprop="wordCount" content="234">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Booster Board">
   <meta name="twitter:description" content="Meet our amazing boosters!">
@@ -158,44 +158,44 @@
     </figcaption>
 </figure>
 
-<figure><img src="/images/niki_ducy.jpg">
+<figure class="image-size"><img src="/images/niki_ducy.jpg">
 </figure>
 </p>
-<p>Niki Ducy has 3 children, 2 of which have done theatre at Westerville South. Her current South thespian is Desmond, who loves both being on stage and doing crew. This is Niki&rsquo;s second year as president of the board and she was Vice President in charge of concessions prior to that.</p>
+<p>Niki Ducy has 3 children, 2 of which have done theatre at Westerville South. Her current South thespian is Desmond, who loves both being on stage and doing crew. This is Niki&rsquo;s third year as president of the board and she was Vice President in charge of concessions prior to that.</p>
 <figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
       <h4>Clay Benton - Vice President</h4>
     </figcaption>
 </figure>
 
-<figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
-      <h4>Katrina Duff - Treasurer</h4>
-    </figcaption>
-</figure>
-
 <p><figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
-      <h4>Amanda Gibson - Assistant Treasurer</h4>
+      <h4>Amanda Gibson - Treasurer</h4>
     </figcaption>
 </figure>
 
-<figure><img src="/images/amanda_gibson.jpg">
+<figure class="image-size"><img src="/images/amanda_gibson.jpg">
 </figure>
 </p>
-<p>Amanda is the assistant treasurer soon to be treasurer for the 25-26 school year. Amanda has a daughter and son. Her daughter is in college studying ceramics and her son is  a sophomore at Westerville South and involved with theater. She works for a small home builder when not at work, or busy with the kids she enjoys traveling with her family and spending time at the family cottage in Canada.</p>
+<p>Amanda is the treasurer for the 25-26 school year. Amanda has a daughter and son. Her daughter is in college studying ceramics and her son is a junior at Westerville South and involved with theater. She works for a small home builder. When not at work, or busy with the kids, she enjoys traveling with her family and spending time at the family cottage in Canada.</p>
+<figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
+      <h4>Michelle Rigsby- Assistant Treasurer</h4>
+    </figcaption>
+</figure>
+
 <p><figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
       <h4>Colleen Light - Secretary</h4>
     </figcaption>
 </figure>
 
-<figure><img src="/images/colleen_light.jpg">
+<figure class="image-size"><img src="/images/colleen_light.jpg">
 </figure>
 </p>
-<p>Colleen Light is a lifelong Westerville resident and Wildcat Alumnus. She has 2 children, one in college, and her youngest is a WS junior, currently involved in Troupe 513, both on stage and off. She has been an active supporter of Troupe 513 before joining the board this season.</p>
+<p>Colleen Light is a lifelong Westerville resident and Wildcat Alumnus. She has 2 children, one in college, and her youngest is a WS senior, currently involved in Troupe 513, both on stage and off. She has been an active supporter of Troupe 513 before joining the board.</p>
 <p><figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
       <h4>Christy Vincent - Fundraising Officer</h4>
     </figcaption>
 </figure>
 
-<figure><img src="/images/christy_vincint.jpg">
+<figure class="image-size"><img src="/images/christy_vincint.jpg">
 </figure>
 </p>
 <p>Christy Vincent is a mom to two boys in Westerville schools who are busy in theatre and athletics along with their academic pursuits. Christy works as an Occupational Therapist for New Albany Plain Local Schools and enjoys being outside and volunteering in multiple capacities.</p>
