--- a/creative_team/index.html
+++ b/creative_team/index.html
@@ -16,7 +16,7 @@
     
 
     
-<link rel="stylesheet" href="/ananke/css/main.min.03379cc185ef6b7f38817990b2975e62a33d24a5763081ae661810c68171f10a.css" >
+<link rel="stylesheet" href="/ananke/css/main.min.959199c6d5df7a6f64c697d5f7fe51fd909a8eb93dace05ee0c243404f865326.css" >
 
 
 
@@ -158,7 +158,7 @@
     </figcaption>
 </figure>
 
-<figure><img src="/images/matt_wolfe.jpg">
+<figure class="image-size"><img src="/images/matt_wolfe.jpg">
 </figure>
 </p>
 <p>Wolfe has been the theatre director at South since 2013. In addition to being South&rsquo;s theatre director, Wolfe teaches IB theatre at South, and Intro to Theatre and Acting at all 3 Westerville schools.</p>
@@ -167,7 +167,7 @@
     </figcaption>
 </figure>
 
-<figure><img src="/images/tyler_domer.jpg">
+<figure class="image-size"><img src="/images/tyler_domer.jpg">
 </figure>
 </p>
 <p>Tyler has been the music director and pit director at South since 2018. In addition to being the music director, Tyler is the Staff Accompanist at Worthington Kilbourne HS, Accompanist at Church of the Master, and he gives piano lessons and voice coaching.</p>
@@ -176,7 +176,7 @@
     </figcaption>
 </figure>
 
-<figure><img src="/images/cindy_straub.jpg">
+<figure class="image-size"><img src="/images/cindy_straub.jpg">
 </figure>
 </p>
 <p>Cindy has been the choreographer at South for a long time. In addition to working at South, Cindy also has a dance studio where she teaches all ages with a focus on musical theatre.</p>
@@ -185,7 +185,7 @@
     </figcaption>
 </figure>
 
-<figure><img src="/images/katie_smith.jpg">
+<figure class="image-size"><img src="/images/katie_smith.jpg">
 </figure>
 </p>
 <p>Katie started as the costume designer at South in 2023, but had been helping Frannie for 4 years before that. Her day job is the attendance clerk at South.</p>
@@ -194,7 +194,7 @@
     </figcaption>
 </figure>
 
-<figure><img src="/images/seth_sprang.jpg">
+<figure class="image-size"><img src="/images/seth_sprang.jpg">
 </figure>
 </p>
 <p>Seth is one of our tech directors - with an emphasis on sound and lights. He has been at South since 2022. His day job is video/podcast editor and live events tech for OhioHealth.</p>
@@ -203,7 +203,7 @@
     </figcaption>
 </figure>
 
-<figure><img src="/images/chris_tucker.jpg">
+<figure class="image-size"><img src="/images/chris_tucker.jpg">
 </figure>
 </p>
 <p>Chris is our other tech director - with an emphasis on set design. He has been at South since 2021. Other jobs include freelancing for events, making 3D models, and stagehand at McCoy Center.</p>
