--- a/faq/index.html
+++ b/faq/index.html
@@ -16,7 +16,7 @@
     
 
     
-<link rel="stylesheet" href="/ananke/css/main.min.03379cc185ef6b7f38817990b2975e62a33d24a5763081ae661810c68171f10a.css" >
+<link rel="stylesheet" href="/ananke/css/main.min.959199c6d5df7a6f64c697d5f7fe51fd909a8eb93dace05ee0c243404f865326.css" >
 
 
 
@@ -47,7 +47,7 @@
 
   <meta itemprop="name" content="FAQ">
   <meta itemprop="description" content="Frequently asked questions">
-  <meta itemprop="wordCount" content="5999">
+  <meta itemprop="wordCount" content="5976">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="FAQ">
   <meta name="twitter:description" content="Frequently asked questions">
@@ -153,18 +153,18 @@
         </h1>
       </header>
       <div class="nested-copy-line-height lh-copy f4 nested-links mid-gray helvetica">
-        <p><a href="https://wshstheatre.org/faq/?q=1">What is the CAPA Marquee Program?</a></p>
-<p><a href="https://wshstheatre.org/faq/?q=2">What are troupe dues and why should my child join?</a></p>
-<p><a href="https://wshstheatre.org/faq/?q=3">What is Booster membership and why should I join?</a></p>
-<p><a href="https://wshstheatre.org/faq/?q=4">What is the One Stop Shop?</a></p>
-<p><a href="https://wshstheatre.org/faq/?q=5">What is Fall Conference?</a></p>
-<p><a href="https://wshstheatre.org/faq/?q=6">What is a student-directed one-act?</a></p>
-<p><a href="https://wshstheatre.org/faq/?q=7">What happens when my kid gets cast in a main stage show?</a></p>
-<p><a href="https://wshstheatre.org/faq/?q=8">What is tech week or a tech practice?</a></p>
-<p><a href="https://wshstheatre.org/faq/?q=9">What is Scho Show?</a></p>
-<p><a href="https://wshstheatre.org/faq/?q=10">How can adults get involved?</a></p>
-<p><a href="https://wshstheatre.org/faq/?q=11">What are the volunteer jobs over show weekend?</a></p>
-<p><a href="https://wshstheatre.org/faq/?q=12">Who can I contact?</a></p>
+        <p><a href="https://wshstheatre.org/faq/?q=1">Who can I contact?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=2">What is the CAPA Marquee Program?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=3">What are troupe dues and why should my child join?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=4">What is Booster membership and why should I join?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=5">What is the One Stop Shop?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=6">What is Fall Conference?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=7">What is a student-directed one-act?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=8">What happens when my kid gets cast in a main stage show?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=9">What is tech week or a tech practice?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=10">What is Scho Show?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=11">How can adults get involved?</a></p>
+<p><a href="https://wshstheatre.org/faq/?q=12">What are the volunteer jobs over show weekend?</a></p>
 <p><a href="https://wshstheatre.org/faq/?q=13">What is the company party?</a></p>
 <p><a href="https://wshstheatre.org/faq/?q=14">What is a dance rehersal like?</a></p>
 <p><a href="https://wshstheatre.org/faq/?q=15">What is show week like?</a></p>
@@ -176,6 +176,38 @@
 <p><a href="https://wshstheatre.org/faq/?q=21">Who are the other adults that work with the troupe (besides Wolfe)?</a></p>
 <p><a href="https://wshstheatre.org/faq/?q=22">What is Theatremas?</a></p>
 <p><a href="https://wshstheatre.org/faq/?q=23">What is state thespian conference?</a></p>
+<figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
+      <h4>Who can I contact?</h4>
+    </figcaption>
+</figure>
+
+<ul>
+<li>Matt Wolfe</li>
+</ul>
+<p><a href="mailto:wolfem@westerville.k12.oh.us">wolfem@westerville.k12.oh.us</a></p>
+<p>Wolfe is our director and is a great resource</p>
+<ul>
+<li>Seth Sprang</li>
+</ul>
+<p><a href="mailto:sethsprang@gmail.com">sethsprang@gmail.com</a></p>
+<p>Seth is one of our tech directors and is a great resource for tech/crew questions</p>
+<ul>
+<li>Katie Smith</li>
+</ul>
+<p><a href="mailto:smithk@westerville.k12.oh.us">smithk@westerville.k12.oh.us</a></p>
+<p>Katie is our costume director. She is a great resource if you have a question about costumes. Katie is also the attendance clerk at South.</p>
+<ul>
+<li>Booster email</li>
+</ul>
+<p><a href="mailto:troupe513boosters@gmail.com">troupe513boosters@gmail.com</a></p>
+<p>This is the general booster email that you can use for booster type questions, or if you aren’t sure who to ask</p>
+<ul>
+<li>Niki Ducy</li>
+</ul>
+<p><a href="mailto:niki@ducy.org">niki@ducy.org</a></p>
+<p>314-495-5383</p>
+<p>Niki is the booster president for the 2025-2026 school year. If you have a time sensitive question, feel free to text instead of email.</p>
+<p><a href="https://wshstheatre.org/faq/?q=0">Back to top</a></p>
 <figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
       <h4>What is the CAPA Marquee Program?</h4>
     </figcaption>
@@ -199,7 +231,7 @@
 <p>As a reminder, troupe membership is for students.</p>
 <p>International Thespians is the honor society that Troupe 513 is part of. Our troupe number (513) comes from when South joined International/Ohio Thespians. Most of our troupe is very active and pays dues to earn points and be a formal part of the troupe. (Joining thespians isn&rsquo;t required to participate in South theatre.)</p>
 <p>If your student wants to be an inducted thespian, they need to have paid dues. The form and payment need to be turned in to Wolfe, not the Boosters.</p>
-<p>If your student is a freshman and pays now, your student gets credit for points earned through this whole year. If your student is a sophomore and joins/pays now, they get credit for points earned this year (freshman year points won’t carry over).</p>
+<p>If your student is a freshman and pays now, your student gets credit for points earned through this whole year. If your student is a sophomore and joins/pays now, they get credit for points earned this year (freshman year points won’t carry over unless you paid dues your freshman year).</p>
 <p>As a rule, if a student is involved heavily with two Main Stage shows and one extra thing (like Scho Show, a student-directed one-act, Drama Camp, etc.), they will earn enough points to become a thespian. This counts for pit, crew, and cast.</p>
 <p>At the end-of-year induction &amp; awards ceremony, new thespians are inducted, and kids who are already members are recognized for earning more points and achieving various honor ranks.</p>
 <p><a href="https://wshstheatre.org/faq/?q=0">Back to top</a></p>
@@ -223,7 +255,7 @@
 <p>Many items are included in the One Stop Shop fee:</p>
 <p>One t-shirt/sweatshirt (included in the OSS fee). You can order more for an additional fee</p>
 <p>Company Meals (included in the OSS fee). Boosters will provide multiple meals and snacks, usually on longer rehearsal days and during tech week. Meal dates will be announced ahead of time by the director.</p>
-<p>Concessions Donation (included in the OSS fee). Boosters will bulk purchase concession items and water with the monetary concession donations. Families will no longer have to purchase and deliver items for concession stand sales.</p>
+<p>Concessions Donation (included in the OSS fee). Boosters will bulk purchase concession items and water with the monetary concession donations.</p>
 <p>Company Party (included in the OSS fee). Boosters will pass on these funds to the company party host during show weekend to help with food costs.</p>
 <p>Financial Assistance Donations. If you would like to make a donation in any amount to cover the cost for students who need financial assistance, please indicate the amount on the form.</p>
 <p>Program Ads and Shout Outs. For each mainstage production, we produce a lovely program. Ads help us pay the costs of the program, raise a little money, and celebrate your thespian! An ad can be a variety of sizes (see information in the form) and include a picture or several. A shout out is a one-line ad of 10 words maximum.</p>
@@ -319,38 +351,6 @@
 <p>50/50 raffle: Boosters sell 50/50 raffle tickets. We will station one helper in the commons, and the other will roam the auditorium, shaming people into buying tickets. (Who is still reading? This is a test.) You&rsquo;ll receive instructions before you get started. We sell before the show and at intermission.</p>
 <p><a href="https://wshstheatre.org/faq/?q=0">Back to top</a></p>
 <figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
-      <h4>Who can I contact?</h4>
-    </figcaption>
-</figure>
-
-<ul>
-<li>Matt Wolfe</li>
-</ul>
-<p><a href="mailto:wolfem@westerville.k12.oh.us">wolfem@westerville.k12.oh.us</a></p>
-<p>Wolfe is our director and is a great resource</p>
-<ul>
-<li>Seth Sprang</li>
-</ul>
-<p><a href="mailto:sethsprang@gmail.com">sethsprang@gmail.com</a></p>
-<p>Seth is one of our tech directors and is a great resource for tech/crew questions</p>
-<ul>
-<li>Katie Smith</li>
-</ul>
-<p><a href="mailto:smithk@westerville.k12.oh.us">smithk@westerville.k12.oh.us</a></p>
-<p>Katie is our costume director. She is a great resource if you have a question about costumes. Katie is also the attendance clerk at South.</p>
-<ul>
-<li>Booster email</li>
-</ul>
-<p><a href="mailto:troupe513boosters@gmail.com">troupe513boosters@gmail.com</a></p>
-<p>This is the general booster email that you can use for booster type questions, or if you aren’t sure who to ask</p>
-<ul>
-<li>Niki Ducy</li>
-</ul>
-<p><a href="mailto:niki@ducy.org">niki@ducy.org</a></p>
-<p>314-495-5383</p>
-<p>Niki is the booster president for the 2025-2026 school year. If you have a time sensitive question, feel free to text instead of email.</p>
-<p><a href="https://wshstheatre.org/faq/?q=0">Back to top</a></p>
-<figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
       <h4>What is the company party?</h4>
     </figcaption>
 </figure>
@@ -359,7 +359,7 @@
 <p>Who is invited? Everyone involved in the show, so the cast, the run crew, the build crew, the paint crew &hellip; anyone! If you filled out a one-stop shop for the show, your kid should feel welcome at and included in the company party. (If your kid hesitates and says, &ldquo;Oh, well, I didn&rsquo;t do much,&rdquo; or &ldquo;I don&rsquo;t know many people,&rdquo; please encourage them to come! These parties are a lot of fun, and it&rsquo;s really where the kids get to hang out and chill in a way different than during rehearsals.) We do ask that kids don&rsquo;t bring guests, even if it&rsquo;s a really fun Troupe 513 member. Company from that show only.</p>
 <p>What will they do? Mostly they hang out, play games, eat, laugh, and get VERY loud.  It&rsquo;s so much fun to listen to all the noise these kids make.</p>
 <p>Are they supervised? Yes, the parent(s) will be home, and they make the rounds and show their faces.</p>
-<p>When does it start? Basically after the show, whenever the kids arrive. It is usually (but not always) after the Friday show. No one should feel rushed; they&rsquo;ll have plenty of time to hang out and have fun. We&rsquo;re doing it after the Friday show because the Saturday show call won&rsquo;t be super early.</p>
+<p>When does it start? Basically after the show, whenever the kids arrive. It is usually (but not always) after the Friday show. No one should feel rushed; they&rsquo;ll have plenty of time to hang out and have fun.</p>
 <p>What can my thespian bring? Sometimes a suggested list will go out by class. Example: seniors bring soda, juniors chips, etc.</p>
 <p>NO NUTS!!</p>
 <p>If you or your kid doesn&rsquo;t have time to go shopping, no worries at all! We will have more than enough food, and no one will go hungry. Don&rsquo;t let not bringing something be an excuse your kid uses to miss the party.</p>
