modified mission statement

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <meta itemprop="name" content="Westerville South&#39;s Troupe 513">
   <meta itemprop="description" content="Best troupe ever!">
-  <meta itemprop="wordCount" content="33">
+  <meta itemprop="wordCount" content="35">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Westerville South&#39;s Troupe 513">
   <meta name="twitter:description" content="Best troupe ever!">
@@ -151,7 +151,7 @@
     <main class="pb7" role="main">
       
   <article class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy black helvetica">
-    <p>The mission of the Westerville South High School Theatre Boosters is to lend all possible support, both moral and financial, to the general theatre program and related activities of Westerville South High School.</p>
+    <p>Westerville South High School Theatre Boosters Inc. is a nonprofit whose mission is to lend all possible support, both moral and financial, to the general theatre program and related activities of Westerville South High School.</p>
 
   </article>
 
