added EIN to mainpage

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <meta itemprop="name" content="Westerville South&#39;s Troupe 513">
   <meta itemprop="description" content="Best troupe ever!">
-  <meta itemprop="wordCount" content="143">
+  <meta itemprop="wordCount" content="145">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Westerville South&#39;s Troupe 513">
   <meta name="twitter:description" content="Best troupe ever!">
@@ -153,6 +153,7 @@
   <article class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy black helvetica">
     <p>Westerville South High School Theatre Boosters Inc. is a nonprofit whose mission is to lend all possible support, both moral and financial, to the general theatre program and related activities of Westerville South High School.</p>
 <p>For the 25-26 season, the theatre program at Westerville South will put on 4 full length shows - 2 musicals and 2 plays, one of which is done in a black box style. In addition, there are 2 full length student directed plays, 1 student written full length musical, 3 sets of 3 student directed one acts, and a student written and directed full length variety show. Westerville South&rsquo;s school year is always full of plenty for the theatre troupe to participate in. Because the theatre program is so robust, it is important to have a strong booster organization to help support and assist in any way necessary.</p>
+<p>(EIN 80-0336357)</p>
 
   </article>
 
