--- a/404.html
+++ b/404.html
@@ -61,7 +61,7 @@
   
   
   
-  <header class="cover bg-center" style="background-image: url('/images/main_banner.jpg');">
+  <header class="cover bg-center" style="background-image: url('/images/main_banner.png');">
     <div class="bg-black-60">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l justify-between items-center center">
@@ -151,24 +151,24 @@
   <h1 class="sponsors-title">
     Please support our sponsors!
   </h1>
-  <img src="/images/sponsors/alex_sunnyside_playroom.jpg" class="sponsor">
-  <img src="/images/sponsors/central_oh_women_in_the_trades.jpg" class="sponsor">
-  <img src="/images/sponsors/david_myers.jpg" class="sponsor">
-  <img src="/images/sponsors/deja_vu.jpg" class="sponsor">
-  <img src="/images/sponsors/family_room_coffee_and_bake_shop.jpg" class="sponsor">
-  <img src="/images/sponsors/good_medicine.jpg" class="sponsor">
-  <img src="/images/sponsors/horvath_vision_care_northwoods.jpg" class="sponsor">
-  <img src="/images/sponsors/jersey_mikes.jpg" class="sponsor">
-  <img src="/images/sponsors/laughing_ogre.jpg" class="sponsor">
-  <img src="/images/sponsors/lime_light_media_line.jpg" class="sponsor">
-  <img src="/images/sponsors/mat_piamonte_f&m_cpa.jpg" class="sponsor">
-  <img src="/images/sponsors/musicologie.jpg" class="sponsor">
-  <img src="/images/sponsors/mylin_ltd.jpg" class="sponsor">
-  <img src="/images/sponsors/neighborhood_bridges.jpg" class="sponsor">
-  <img src="/images/sponsors/north_high.jpg" class="sponsor">
-  <img src="/images/sponsors/staufs_coffee.jpg" class="sponsor">
-  <img src="/images/sponsors/straub_dance_center.jpg" class="sponsor">
-  <img src="/images/sponsors/westerville_north_music_boosters.jpg" class="sponsor">
+  <img src="/images/sponsors/alex_sunnyside_playroom.png" class="sponsor">
+  <img src="/images/sponsors/central_oh_women_in_the_trades.png" class="sponsor">
+  <img src="/images/sponsors/david_myers.png" class="sponsor">
+  <img src="/images/sponsors/deja_vu.png" class="sponsor">
+  <img src="/images/sponsors/family_room_coffee_and_bake_shop.png" class="sponsor">
+  <img src="/images/sponsors/good_medicine.png" class="sponsor">
+  <img src="/images/sponsors/horvath_vision_care_northwoods.png" class="sponsor">
+  <img src="/images/sponsors/jersey_mikes.png" class="sponsor">
+  <img src="/images/sponsors/laughing_ogre.png" class="sponsor">
+  <img src="/images/sponsors/lime_light_media_line.png" class="sponsor">
+  <img src="/images/sponsors/mat_piamonte_f&m_cpa.png" class="sponsor">
+  <img src="/images/sponsors/musicologie.png" class="sponsor">
+  <img src="/images/sponsors/mylin_ltd.png" class="sponsor">
+  <img src="/images/sponsors/neighborhood_bridges.png" class="sponsor">
+  <img src="/images/sponsors/north_high.png" class="sponsor">
+  <img src="/images/sponsors/staufs_coffee.png" class="sponsor">
+  <img src="/images/sponsors/straub_dance_center.png" class="sponsor">
+  <img src="/images/sponsors/westerville_north_music_boosters.png" class="sponsor">
 </figure>
 <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
