--- a/booster_board/index.html
+++ b/booster_board/index.html
@@ -62,7 +62,7 @@
   
   
   
-  <header class="cover bg-center" style="background-image: url('/images/board_banner.jpg');">
+  <header class="cover bg-center" style="background-image: url('/images/board_banner.png');">
     <div class="bg-black-60">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l justify-between items-center center">
@@ -158,7 +158,7 @@
     </figcaption>
 </figure>
 
-<figure class="image-size"><img src="/images/niki_ducy.jpg">
+<figure class="image-size"><img src="/images/niki_ducy.png">
 </figure>
 </p>
 <p>Niki Ducy has 3 children, 2 of which have done theatre at Westerville South. Her current South thespian is Desmond, who loves both being on stage and doing crew. This is Niki&rsquo;s third year as president of the board and she was Vice President in charge of concessions prior to that.</p>
@@ -172,7 +172,7 @@
     </figcaption>
 </figure>
 
-<figure class="image-size"><img src="/images/amanda_gibson.jpg">
+<figure class="image-size"><img src="/images/amanda_gibson.png">
 </figure>
 </p>
 <p>Amanda is the treasurer for the 25-26 school year. Amanda has a daughter and son. Her daughter is in college studying ceramics and her son is a junior at Westerville South and involved with theater. She works for a small home builder. When not at work, or busy with the kids, she enjoys traveling with her family and spending time at the family cottage in Canada.</p>
@@ -186,7 +186,7 @@
     </figcaption>
 </figure>
 
-<figure class="image-size"><img src="/images/colleen_light.jpg">
+<figure class="image-size"><img src="/images/colleen_light.png">
 </figure>
 </p>
 <p>Colleen Light is a lifelong Westerville resident and Wildcat Alumnus. She has 2 children, one in college, and her youngest is a WS senior, currently involved in Troupe 513, both on stage and off. She has been an active supporter of Troupe 513 before joining the board.</p>
@@ -195,7 +195,7 @@
     </figcaption>
 </figure>
 
-<figure class="image-size"><img src="/images/christy_vincint.jpg">
+<figure class="image-size"><img src="/images/christy_vincint.png">
 </figure>
 </p>
 <p>Christy Vincent is a mom to two boys in Westerville schools who are busy in theatre and athletics along with their academic pursuits. Christy works as an Occupational Therapist for New Albany Plain Local Schools and enjoys being outside and volunteering in multiple capacities.</p>
@@ -221,24 +221,24 @@
   <h1 class="sponsors-title">
     Please support our sponsors!
   </h1>
-  <img src="/images/sponsors/alex_sunnyside_playroom.jpg" class="sponsor">
-  <img src="/images/sponsors/central_oh_women_in_the_trades.jpg" class="sponsor">
-  <img src="/images/sponsors/david_myers.jpg" class="sponsor">
-  <img src="/images/sponsors/deja_vu.jpg" class="sponsor">
-  <img src="/images/sponsors/family_room_coffee_and_bake_shop.jpg" class="sponsor">
-  <img src="/images/sponsors/good_medicine.jpg" class="sponsor">
-  <img src="/images/sponsors/horvath_vision_care_northwoods.jpg" class="sponsor">
-  <img src="/images/sponsors/jersey_mikes.jpg" class="sponsor">
-  <img src="/images/sponsors/laughing_ogre.jpg" class="sponsor">
-  <img src="/images/sponsors/lime_light_media_line.jpg" class="sponsor">
-  <img src="/images/sponsors/mat_piamonte_f&m_cpa.jpg" class="sponsor">
-  <img src="/images/sponsors/musicologie.jpg" class="sponsor">
-  <img src="/images/sponsors/mylin_ltd.jpg" class="sponsor">
-  <img src="/images/sponsors/neighborhood_bridges.jpg" class="sponsor">
-  <img src="/images/sponsors/north_high.jpg" class="sponsor">
-  <img src="/images/sponsors/staufs_coffee.jpg" class="sponsor">
-  <img src="/images/sponsors/straub_dance_center.jpg" class="sponsor">
-  <img src="/images/sponsors/westerville_north_music_boosters.jpg" class="sponsor">
+  <img src="/images/sponsors/alex_sunnyside_playroom.png" class="sponsor">
+  <img src="/images/sponsors/central_oh_women_in_the_trades.png" class="sponsor">
+  <img src="/images/sponsors/david_myers.png" class="sponsor">
+  <img src="/images/sponsors/deja_vu.png" class="sponsor">
+  <img src="/images/sponsors/family_room_coffee_and_bake_shop.png" class="sponsor">
+  <img src="/images/sponsors/good_medicine.png" class="sponsor">
+  <img src="/images/sponsors/horvath_vision_care_northwoods.png" class="sponsor">
+  <img src="/images/sponsors/jersey_mikes.png" class="sponsor">
+  <img src="/images/sponsors/laughing_ogre.png" class="sponsor">
+  <img src="/images/sponsors/lime_light_media_line.png" class="sponsor">
+  <img src="/images/sponsors/mat_piamonte_f&m_cpa.png" class="sponsor">
+  <img src="/images/sponsors/musicologie.png" class="sponsor">
+  <img src="/images/sponsors/mylin_ltd.png" class="sponsor">
+  <img src="/images/sponsors/neighborhood_bridges.png" class="sponsor">
+  <img src="/images/sponsors/north_high.png" class="sponsor">
+  <img src="/images/sponsors/staufs_coffee.png" class="sponsor">
+  <img src="/images/sponsors/straub_dance_center.png" class="sponsor">
+  <img src="/images/sponsors/westerville_north_music_boosters.png" class="sponsor">
 </figure>
 <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
