--- a/creative_team/index.html
+++ b/creative_team/index.html
@@ -62,7 +62,7 @@
   
   
   
-  <header class="cover bg-center" style="background-image: url('/images/creative_banner.jpg');">
+  <header class="cover bg-center" style="background-image: url('/images/creative_banner.png');">
     <div class="bg-black-60">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l justify-between items-center center">
@@ -158,7 +158,7 @@
     </figcaption>
 </figure>
 
-<figure class="image-size"><img src="/images/matt_wolfe.jpg">
+<figure class="image-size"><img src="/images/matt_wolfe.png">
 </figure>
 </p>
 <p>Wolfe has been the theatre director at South since 2013. In addition to being South&rsquo;s theatre director, Wolfe teaches IB theatre at South, and Intro to Theatre and Acting at all 3 Westerville schools.</p>
@@ -167,7 +167,7 @@
     </figcaption>
 </figure>
 
-<figure class="image-size"><img src="/images/tyler_domer.jpg">
+<figure class="image-size"><img src="/images/tyler_domer.png">
 </figure>
 </p>
 <p>Tyler has been the music director and pit director at South since 2018. In addition to being the music director, Tyler is the Staff Accompanist at Worthington Kilbourne HS, Accompanist at Church of the Master, and he gives piano lessons and voice coaching.</p>
@@ -176,7 +176,7 @@
     </figcaption>
 </figure>
 
-<figure class="image-size"><img src="/images/cindy_straub.jpg">
+<figure class="image-size"><img src="/images/cindy_straub.png">
 </figure>
 </p>
 <p>Cindy has been the choreographer at South for a long time. In addition to working at South, Cindy also has a dance studio where she teaches all ages with a focus on musical theatre.</p>
@@ -185,7 +185,7 @@
     </figcaption>
 </figure>
 
-<figure class="image-size"><img src="/images/katie_smith.jpg">
+<figure class="image-size"><img src="/images/katie_smith.png">
 </figure>
 </p>
 <p>Katie started as the costume designer at South in 2023, but had been helping Frannie for 4 years before that. Her day job is the attendance clerk at South.</p>
@@ -194,7 +194,7 @@
     </figcaption>
 </figure>
 
-<figure class="image-size"><img src="/images/seth_sprang.jpg">
+<figure class="image-size"><img src="/images/seth_sprang.png">
 </figure>
 </p>
 <p>Seth is one of our tech directors - with an emphasis on sound and lights. He has been at South since 2022. His day job is video/podcast editor and live events tech for OhioHealth.</p>
@@ -203,7 +203,7 @@
     </figcaption>
 </figure>
 
-<figure class="image-size"><img src="/images/chris_tucker.jpg">
+<figure class="image-size"><img src="/images/chris_tucker.png">
 </figure>
 </p>
 <p>Chris is our other tech director - with an emphasis on set design. He has been at South since 2021. Other jobs include freelancing for events, making 3D models, and stagehand at McCoy Center.</p>
@@ -229,24 +229,24 @@
   <h1 class="sponsors-title">
     Please support our sponsors!
   </h1>
-  <img src="/images/sponsors/alex_sunnyside_playroom.jpg" class="sponsor">
-  <img src="/images/sponsors/central_oh_women_in_the_trades.jpg" class="sponsor">
-  <img src="/images/sponsors/david_myers.jpg" class="sponsor">
-  <img src="/images/sponsors/deja_vu.jpg" class="sponsor">
-  <img src="/images/sponsors/family_room_coffee_and_bake_shop.jpg" class="sponsor">
-  <img src="/images/sponsors/good_medicine.jpg" class="sponsor">
-  <img src="/images/sponsors/horvath_vision_care_northwoods.jpg" class="sponsor">
-  <img src="/images/sponsors/jersey_mikes.jpg" class="sponsor">
-  <img src="/images/sponsors/laughing_ogre.jpg" class="sponsor">
-  <img src="/images/sponsors/lime_light_media_line.jpg" class="sponsor">
-  <img src="/images/sponsors/mat_piamonte_f&m_cpa.jpg" class="sponsor">
-  <img src="/images/sponsors/musicologie.jpg" class="sponsor">
-  <img src="/images/sponsors/mylin_ltd.jpg" class="sponsor">
-  <img src="/images/sponsors/neighborhood_bridges.jpg" class="sponsor">
-  <img src="/images/sponsors/north_high.jpg" class="sponsor">
-  <img src="/images/sponsors/staufs_coffee.jpg" class="sponsor">
-  <img src="/images/sponsors/straub_dance_center.jpg" class="sponsor">
-  <img src="/images/sponsors/westerville_north_music_boosters.jpg" class="sponsor">
+  <img src="/images/sponsors/alex_sunnyside_playroom.png" class="sponsor">
+  <img src="/images/sponsors/central_oh_women_in_the_trades.png" class="sponsor">
+  <img src="/images/sponsors/david_myers.png" class="sponsor">
+  <img src="/images/sponsors/deja_vu.png" class="sponsor">
+  <img src="/images/sponsors/family_room_coffee_and_bake_shop.png" class="sponsor">
+  <img src="/images/sponsors/good_medicine.png" class="sponsor">
+  <img src="/images/sponsors/horvath_vision_care_northwoods.png" class="sponsor">
+  <img src="/images/sponsors/jersey_mikes.png" class="sponsor">
+  <img src="/images/sponsors/laughing_ogre.png" class="sponsor">
+  <img src="/images/sponsors/lime_light_media_line.png" class="sponsor">
+  <img src="/images/sponsors/mat_piamonte_f&m_cpa.png" class="sponsor">
+  <img src="/images/sponsors/musicologie.png" class="sponsor">
+  <img src="/images/sponsors/mylin_ltd.png" class="sponsor">
+  <img src="/images/sponsors/neighborhood_bridges.png" class="sponsor">
+  <img src="/images/sponsors/north_high.png" class="sponsor">
+  <img src="/images/sponsors/staufs_coffee.png" class="sponsor">
+  <img src="/images/sponsors/straub_dance_center.png" class="sponsor">
+  <img src="/images/sponsors/westerville_north_music_boosters.png" class="sponsor">
 </figure>
 <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
