added les mis tickets

--- a/upcoming_shows/index.html
+++ b/upcoming_shows/index.html
@@ -47,7 +47,7 @@
 
   <meta itemprop="name" content="Upcoming Shows">
   <meta itemprop="description" content="Check out Troupe 513&#39;s upcoming productions!">
-  <meta itemprop="wordCount" content="5">
+  <meta itemprop="wordCount" content="95">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Upcoming Shows">
   <meta name="twitter:description" content="Check out Troupe 513&#39;s upcoming productions!">
@@ -154,13 +154,14 @@
       </header>
       <div class="nested-copy-line-height lh-copy f4 nested-links mid-gray helvetica">
         <p><figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
-      <h4>Looking forward to next year!</h4>
+      <h4>Les Misérables</h4>
     </figcaption>
 </figure>
 
-<figure><img src="/images/mainstage_season.png">
+<figure><img src="/images/les_mis_logo.png">
 </figure>
 </p>
+<p>In nineteenth century France, Jean Valjean is released from years of unjust imprisonment, but finds nothing in store for him but mistrust and mistreatment. He breaks his parole in hopes of starting a new life, initiating a lifelong struggle for redemption as he is relentlessly pursued by police inspector Javert, who refuses to believe Valjean can change his ways. Finally, during the Paris student uprising of 1832, Javert must confront his ideals after Valjean spares his life and saves that of the student revolutionary who has captured the heart of Valjean&rsquo;s adopted daughter.</p>
 
       </div>
     </article>
@@ -176,7 +177,11 @@
       }
     }
   </script>
-
+  
+    <button type="button" class="button2" onclick="window.open('https://westerville.hometownticketing.com/embed/all?schools=14&depts=3', '_blank').focus();">
+      Buy Tickets!
+    </button>
+  
 
     </main>
     <figure class="sponsors">
